CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(ProjectCreator)

SET(CMAKE_AUTOMOC ON)

SET(Qt5_COMPONENTS Core Gui Widgets)
FIND_PACKAGE(Qt5 COMPONENTS ${Qt5_COMPONENTS} REQUIRED)

#SET(HEADERS )

#SET(SOURCES )

SET(LIBS Qt5::Core
         Qt5::Gui
         Qt5::Widgets
)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  PUBLIC ${LIBS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
